--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,12 +1,6 @@
-# SPDX-License-Identifier: Apache-2.0
-#
-# Unless explicitly stated otherwise all files in this repository are licensed under the Apache License Version 2.0.
-#
-# This product includes software developed at Datadog (https://www.datadoghq.com/).
-# Copyright 2025-present Datadog, Inc.
-
-
 name: "CodeQL"
+permissions:
+  contents: read
 
 on:
   push:
@@ -17,9 +11,6 @@ on:
 jobs:
   analyze:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        language: [none]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -27,4 +18,11 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
+          # IMPORTANT: empty list => do not run any language extractor
           languages: []
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Perform CodeQL analysis
+        uses: github/codeql-action/analyze@v4
