--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,17 +15,16 @@ on:
         required: false
         default: ''
       version_increment:
-        description: 'Version increment type (or leave empty to skip release)'
+        description: 'Version increment type (ignored if release_version is provided)'
         required: false
         type: choice
         options:
-          - ''
           - patch
           - minor
           - major
-        default: ''
+        default: 'patch'
       release_version:
-        description: 'Manual version override (e.g., v1.0.0). Leave empty to auto-increment based on version_increment choice.'
+        description: 'Manual version override (e.g., v1.0.0). Leave empty to auto-increment.'
         required: false
         default: ''
       feature_preset:
@@ -56,8 +55,6 @@ jobs:
   create-release:
     name: Create GitHub Release
     needs: build
-    # Only create releases when version_increment or release_version is provided
-    if: github.event.inputs.version_increment != '' || github.event.inputs.release_version != ''
     runs-on: ubuntu-latest
     permissions:
       contents: write
