--- a/.github/workflows/build-platform.yml
+++ b/.github/workflows/build-platform.yml
@@ -132,43 +132,35 @@ jobs:
       - name: Verify build artifacts
         if: inputs.verify_artifacts
         run: |
+          output_dir="output/libdatadog-${{ matrix.platform }}"
+
           if [ "$RUNNER_OS" == "Windows" ]; then
-            output_dir="output/libdatadog-${{ matrix.platform }}/libdatadog-${{ matrix.platform }}"
             # Check for DLL
-            if [ ! -f "$output_dir/release/dynamic/datadog_profiling_ffi.dll" ]; then
-              echo "Error: Release DLL not found"
+            if [ ! -f "$output_dir/lib/datadog_profiling.dll" ]; then
+              echo "Error: Release DLL not found at $output_dir/lib/datadog_profiling.dll"
               exit 1
             fi
-            # Check for headers
-            if [ ! -d "$output_dir/include/datadog" ] || [ -z "$(ls -A $output_dir/include/datadog)" ]; then
-              echo "Error: Headers not found or empty"
-              exit 1
-            fi
-            # Check for license files
-            if [ ! -f "$output_dir/LICENSE" ]; then
-              echo "Error: LICENSE not found"
-              exit 1
-            fi
-            echo "Build artifacts verified successfully!"
           else
-            output_dir="output/libdatadog-${{ matrix.platform }}/libdatadog-${{ matrix.platform }}"
             # Check for shared library
             if [ ! -f "$output_dir/lib/libdatadog_profiling.so" ] && [ ! -f "$output_dir/lib/libdatadog_profiling.dylib" ]; then
               echo "Error: Shared library not found"
               exit 1
             fi
-            # Check for headers
-            if [ ! -d "$output_dir/include/datadog" ] || [ -z "$(ls -A $output_dir/include/datadog)" ]; then
-              echo "Error: Headers not found or empty"
-              exit 1
-            fi
-            # Check for license files
-            if [ ! -f "$output_dir/LICENSE" ]; then
-              echo "Error: LICENSE not found"
-              exit 1
-            fi
-            echo "Build artifacts verified successfully!"
           fi
+
+          # Check for headers
+          if [ ! -d "$output_dir/include/datadog" ] || [ -z "$(ls -A $output_dir/include/datadog)" ]; then
+            echo "Error: Headers not found or empty"
+            exit 1
+          fi
+
+          # Check for license files
+          if [ ! -f "$output_dir/LICENSE" ]; then
+            echo "Error: LICENSE not found"
+            exit 1
+          fi
+
+          echo "Build artifacts verified successfully!"
         shell: bash
 
       - name: Upload build artifacts
