--- a/.github/workflows/build-platform.yml
+++ b/.github/workflows/build-platform.yml
@@ -64,11 +64,11 @@ jobs:
           - arch: arm64
             platform: aarch64-unknown-linux-gnu
             target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
+            os: ubuntu-24.04-arm64
           - arch: arm64
             platform: aarch64-alpine-linux-musl
             target: aarch64-unknown-linux-musl
-            os: ubuntu-latest
+            os: ubuntu-24.04-arm64
           # macOS builds
           - arch: x64
             platform: x86_64-apple-darwin
