--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,45 +131,33 @@ jobs:
       - name: Create release archives
         id: create_archives
         run: |
+          cd artifacts
+
           echo "=== Creating Windows x64 zip ==="
-          cd artifacts/libdatadog-x64-windows
-          zip -r ../../libdatadog-x64-windows.zip libdatadog-x64-windows/
-          cd ../..
+          zip -r ../libdatadog-x64-windows.zip libdatadog-x64-windows/
 
           echo "=== Creating Windows x86 zip ==="
-          cd artifacts/libdatadog-x86-windows
-          zip -r ../../libdatadog-x86-windows.zip libdatadog-x86-windows/
-          cd ../..
+          zip -r ../libdatadog-x86-windows.zip libdatadog-x86-windows/
 
           echo "=== Creating Linux x86_64-unknown-linux-gnu tar.gz ==="
-          cd artifacts/libdatadog-x86_64-unknown-linux-gnu
-          tar -czf ../../libdatadog-x86_64-unknown-linux-gnu.tar.gz libdatadog-x86_64-unknown-linux-gnu/
-          cd ../..
+          tar -czf ../libdatadog-x86_64-unknown-linux-gnu.tar.gz libdatadog-x86_64-unknown-linux-gnu/
 
           echo "=== Creating Linux x86_64-alpine-linux-musl tar.gz ==="
-          cd artifacts/libdatadog-x86_64-alpine-linux-musl
-          tar -czf ../../libdatadog-x86_64-alpine-linux-musl.tar.gz libdatadog-x86_64-alpine-linux-musl/
-          cd ../..
+          tar -czf ../libdatadog-x86_64-alpine-linux-musl.tar.gz libdatadog-x86_64-alpine-linux-musl/
 
           echo "=== Creating Linux aarch64-unknown-linux-gnu tar.gz ==="
-          cd artifacts/libdatadog-aarch64-unknown-linux-gnu
-          tar -czf ../../libdatadog-aarch64-unknown-linux-gnu.tar.gz libdatadog-aarch64-unknown-linux-gnu/
-          cd ../..
+          tar -czf ../libdatadog-aarch64-unknown-linux-gnu.tar.gz libdatadog-aarch64-unknown-linux-gnu/
 
           echo "=== Creating Linux aarch64-alpine-linux-musl tar.gz ==="
-          cd artifacts/libdatadog-aarch64-alpine-linux-musl
-          tar -czf ../../libdatadog-aarch64-alpine-linux-musl.tar.gz libdatadog-aarch64-alpine-linux-musl/
-          cd ../..
+          tar -czf ../libdatadog-aarch64-alpine-linux-musl.tar.gz libdatadog-aarch64-alpine-linux-musl/
 
           echo "=== Creating macOS x86_64-apple-darwin tar.gz ==="
-          cd artifacts/libdatadog-x86_64-apple-darwin
-          tar -czf ../../libdatadog-x86_64-apple-darwin.tar.gz libdatadog-x86_64-apple-darwin/
-          cd ../..
+          tar -czf ../libdatadog-x86_64-apple-darwin.tar.gz libdatadog-x86_64-apple-darwin/
 
           echo "=== Creating macOS aarch64-apple-darwin tar.gz ==="
-          cd artifacts/libdatadog-aarch64-apple-darwin
-          tar -czf ../../libdatadog-aarch64-apple-darwin.tar.gz libdatadog-aarch64-apple-darwin/
-          cd ../..
+          tar -czf ../libdatadog-aarch64-apple-darwin.tar.gz libdatadog-aarch64-apple-darwin/
+
+          cd ..
 
           echo "=== Calculating SHA256 hashes ==="
           SHA256_WIN_X64=$(sha256sum libdatadog-x64-windows.zip | cut -d' ' -f1)
