--- a/.github/workflows/build-platform.yml
+++ b/.github/workflows/build-platform.yml
@@ -93,9 +93,8 @@ jobs:
           rustup target add ${{ matrix.target }}
 
       - name: Install cross-compilation tools (Linux only)
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.os == 'ubuntu-latest' && matrix.target != 'x86_64-unknown-linux-gnu'
         run: |
-          # Install cross for all Linux targets to ensure GLIBC 2.17 compatibility via CentOS 7 containers
           cargo install cross --git https://github.com/cross-rs/cross
           sudo apt-get update
           case "${{ matrix.target }}" in
