--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,5 @@
 [target.x86_64-unknown-linux-gnu]
 dockerfile = "./tools/docker/Dockerfile.centos"
+
+[target.aarch64-unknown-linux-gnu]
+dockerfile = "./tools/docker/Dockerfile.centos-aarch64"
