--- a/.github/workflows/build-platform.yml
+++ b/.github/workflows/build-platform.yml
@@ -15,7 +15,7 @@ on:
         required: true
         type: string
       feature_preset:
-        description: 'Feature preset: minimal or standard'
+        description: 'Feature preset'
         required: false
         type: string
         default: 'minimal'
